Note the JDK 24+ native access warning that Narcissus triggers (JEP 472)